--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,7 @@ div {
   width: 48px;
   height: 48px;
   border-radius: 50%;
-  background-color: blue;
+  background-color: #e1e1e1;
   margin-right: 10px;
 }
 
