added top navigation bar

--- a/styles.css
+++ b/styles.css
@@ -53,10 +53,6 @@ table {
   border-spacing: 0;
 }
 
-a.refresh-tweets.hidden {
-  display: none;
-}
-
 /*
   ========================================
   Basic Styles
@@ -70,28 +66,29 @@ a.refresh-tweets.hidden {
      -moz-box-sizing: border-box;
           box-sizing: border-box;
 }
-
-body {
+body,
+body > * {
   background: #e6ecf0;
   color: #14171a;
   font-size: 14px;
+  line-height: 20px;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
-
 div {
   display: block;
 }
-
-.main-col {
-  margin: 10px;
+a {
+  color: #1da1f2;
+  text-decoration: none;
 }
-
 /*
   ========================================
-  Rows
+  Stream
   ========================================
 */
-
+.stream {
+  margin: 10px;
+}
 .row {
   display: block;
   background: #fff;
@@ -99,7 +96,6 @@ div {
   margin: 0 auto; /* center each row, with no space above/below */
   padding: 9px 12px;
   border-bottom: 1px solid #e6ecf0;
-  line-height: 20px;
 }
 .row:hover {
   background-color: #f5f8fa;
@@ -118,7 +114,6 @@ div {
   background: #f5f8fa;
 }
 .avatar {
-  /*display:;*/
   display: inline-block;
   width: 48px;
   height: 48px;
@@ -126,21 +121,12 @@ div {
   background-color: #e1e1e1;
   margin-right: 10px;
 }
-
 .content {
   display: inline-block;
   height: 100%;
   vertical-align: top;
   
 }
-
-a {
-  color: #1da1f2;
-}
-a:hover {
-  text-decoration: underline;
-}
-
 .username,
 .timestamp {
   color: #657786;
@@ -148,7 +134,7 @@ a:hover {
 
 /*
   ========================================
-  "New Tweets" prompt
+  "See New Tweets"
   ========================================
 */
 
@@ -163,4 +149,52 @@ a:hover {
   border: 1px solid #ccd6dd;
   text-decoration: none;
   cursor: pointer;
+}
+a.refresh-tweets.hidden {
+  display: none;
+}
+
+/*
+  ========================================
+  Main Navigation
+  ========================================
+*/
+
+.main-nav {
+  height: 46px;
+  width: 100%;
+}
+nav.main-nav {
+  background: #fff;
+  position: fixed;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+}
+.helper {
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+}
+.home-buttons {
+  float: left;
+  height: 100%;
+}
+.home-icon,
+.home-text {
+  vertical-align: middle;
+}
+.home-icon {
+  margin-left: 10px;
+}
+.home-text {
+  font-size: 13px;
+  font-weight: bold;
+}
+.current-view {
+  position: absolute;
+  display: block;
+  width: 100%;
+  text-align: center;
+  line-height: 44px;
+  font-size: 20px;
+  color: #1da1f2;
 }
