--- a/styles.css
+++ b/styles.css
@@ -118,7 +118,6 @@ a {
   width: 48px;
   height: 48px;
   border-radius: 50%;
-  background-color: #e1e1e1;
   margin-right: 10px;
 }
 .content {
@@ -127,9 +126,16 @@ a {
   vertical-align: top;
   
 }
-.username,
 .timestamp {
   color: #657786;
+}
+.username {
+  color: #14171a;
+  font-weight: bold;
+}
+.username:hover {
+  color: #1da1f2;
+  text-decoration: underline;
 }
 
 /*
